# godrust

./: .gitignore
godot/: icon.svg.import  main.tscn  project.godot  rust.gdextension  rust.gdextension.uid
godot/art/: Preview.png.import  Sample.png.import
godot/art/Tilemap/: tilemap.png.import  tilemap_packed.png.import
godot/art/Tiles/: tile_0000.png.import  tile_0001.png.import  tile_0002.png.import  tile_0003.png.import  tile_0004.png.import  tile_0005.png.import  tile_0006.png.import  tile_0007.png.import  tile_0008.png.import  tile_0009.png.import  tile_0010.png.import  tile_0011.png.import  tile_0012.png.import  tile_0013.png.import  tile_0014.png.import  tile_0015.png.import  tile_0016.png.import  tile_0017.png.import  tile_0018.png.import  tile_0019.png.import  tile_0020.png.import  tile_0021.png.import  tile_0022.png.import  tile_0023.png.import  tile_0024.png.import  tile_0025.png.import  tile_0026.png.import  tile_0027.png.import  tile_0028.png.import  tile_0029.png.import  tile_0030.png.import  tile_0031.png.import  tile_0032.png.import  tile_0033.png.import  tile_0034.png.import  tile_0035.png.import  tile_0036.png.import  tile_0037.png.import  tile_0038.png.import  tile_0039.png.import  (+92 more)
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
