[package]
name = "rust_project" # Part of dynamic library name; we use {YourCrate} placeholder.
version = "0.1.0"     # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = "0.4.5"
